# supreme-octo-broccoli

./: .clang-format  README.md
Adressverwaltung/: .classpath  AddressManagementProgram.java
AdressverwaltungAspectJ/: .project
AdressverwaltungAspectJ/src/: module-info.java
AdressverwaltungAspectJ/src/de/lindemann/msd/: Address.java  AddressManagement.java  AddressManagementProgram.java  ConsoleFeedbackAspect.aj
Streichholz/: CMakeLists.txt  build.gradle  cmake_build.bat  main.cpp
Streichholz/src/: main.cpp
Transformer/src/: module-info.java
Transformer/src/de/lindemann/msd/: Transformer.java  TransformerBuilder.java  Weapon.java
